Switch to LZO.